[project]
name = "amnay"
version = "0.1.1"
description = "CI/CD pipeline validation engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Rezak Aziz" }
]

keywords = [
    "ci",
    "cd",
    "github-actions",
    "gitlab-ci",
    "devops",
    "security",
    "validation",
    "policy-engine"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/rezak430/amnay"
Repository = "https://github.com/rezak430/amnay"
Issues = "https://github.com/rezak430/amnay/issues"

[project.scripts]
amnay = "amnay.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
amnay = [
    "policies/*.yaml"
]